# Working-with-databases

./: .gitignore
Lesson3/Task1/: Create.sql
Lesson3/Task2/: Select.sql
Lesson4/Task1/: Insert.sql  Select_2.sql  createTable.sql  insertTable.sql  selectTable.sql
Lesson5/Task1/: CMakeLists.txt  dbManagement.cpp  main.cpp
Lesson6/Task1/Lesson6-Task1/: Lesson6-Task1.sln
Lesson6/Task1/Lesson6-Task1/Lesson6-Task1/: Lesson6-Task1.vcxproj  Main.cpp
